<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_explore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="8dp"
    android:paddingTop="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_illustration_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="156dp"
                android:layout_height="75dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/explore_content_desc_illustration_icon"
                app:srcCompat="@drawable/ic_gitwhite" />

            <TextView
                style="@style/SearchTextCenterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxWidth="260dp"
                android:text="@string/explore_headline" />

        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_explore_search"
            style="@style/ExploreSearchView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_edit_text_search_explore"
            app:layout_constraintBottom_toBottomOf="@id/mcard_explore_search_icon_container"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/mcard_explore_search_icon_container"
            app:layout_constraintTop_toTopOf="@id/mcard_explore_search_icon_container"
            app:layout_constraintVertical_bias="0.0"
            app:queryHint="@string/explore_search_hint" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcard_explore_search_icon_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardElevation="4dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeableImageCircular">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="12dp">

                <ImageView
                    android:layout_width="@dimen/explore_icon_size"
                    android:layout_height="@dimen/explore_icon_size"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/explore_content_desc_search_icon"
                    app:srcCompat="@android:drawable/ic_menu_search" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_explore_user_list_label"
            style="@style/SearchTextResultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/explore_user_list_label"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_explore_search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_explore"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:paddingTop="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_explore_user_list_label"
            tools:listitem="@layout/item_user" />

        <TextView
            android:id="@+id/tv_explore_not_found_feedback"
            style="@style/SearchTextAlertLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:text="@string/result_not_found_message"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_explore_search" />

        <TextView
            android:id="@+id/tv_explore_error_message"
            style="@style/SearchTextAlertLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:text="@string/error_message"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_explore_error_message_description"
            style="@style/SearchTextAlertLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/error_message_description"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_explore_error_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>