<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.SplashScreenActivity"
    tools:viewBindingIgnore="true">

    <ImageView
        android:id="@+id/iv_splash_screen"
        android:layout_width="@dimen/splash_screen_logo_size"
        android:layout_height="@dimen/splash_screen_logo_size"
        android:contentDescription="@string/content_description_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@color/primaryLight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottom_nav_radius_size"
        android:gravity="center"
        android:text="@string/splash_screen_title_label"
        android:theme="@style/SplashScreenTitleLabelNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_splash_screen">

    </TextView>


    <TextView
        style="@style/SplashScreenTitleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/splash_screen_bottom_label_margin"
        android:gravity="center"
        android:text="@string/content_description_splash_label"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>